# AI-CAE4ALL

./: .gitignore  AI_CAE4ALL_main.py  CAE_ML_Suite_main.py  CLAUDE.md  CONFIGURATION_REFERENCE.md  INFERENCE_BUNDLE_PLAN.md  README.md  REPOSITORY_OVERVIEW.md  ai_cae4all.local.example.toml  cae_suite.local.example.toml  git-auto-push.sh  git-fresh-start.sh  pyproject.toml
Geometry_generation/: .gitignore  CLAUDE.md  FOUNDATION_MODEL_PLAN.md  GEOMETRY_GENERATION_RESEARCH.md  README.md  SDFFlow_main.py  SOTA_CONDITIONAL_GEOMETRY_SURVEY_2026-07.md  build_dataset.py  merge_sdfflow_checkpoint.py  requirements.txt
Geometry_generation/general_modules/: distributed.py  load_config.py  sdf_dataset.py  sdf_sampling.py
Geometry_generation/inference_profiles/: interpolate.py  sample.py
Geometry_generation/model/: sdf_vae.py  velocity_net.py
Geometry_generation/training_profiles/: setup.py  train_fm.py  train_pipeline.py  train_vae.py
MeshGraphNets - variational/: MeshGraphNets_main.py
MeshGraphNets - variational/docs/: ADAPTIVE_REMESHING_PLAN.md  MGN_ENHANCEMENT_RESEARCH.md
MeshGraphNets - variational/general_modules/: mesh_dataset.py  time_integration.py  world_edges.py
Neural_Operator/: .gitignore  CLAUDE.md  main.py
cae_suite/: __init__.py  checkpoint_probe.py  cli.py  config_parser.py  dataset_probe.py  diagnostics.py  launcher.py  native_probe.py  path_checks.py  preflight.py  registry.py  settings.py
dataset/: DATASET_FORMAT.md
inference/: README.md  pyinstaller.spec  requirements.txt  run_inference.py
transolver/: .gitignore  Transolver_main.py
(+402 files in other folders)
