[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cae-ml-suite-launcher"
version = "0.1.0"
description = "Automatic config-driven launcher for the CAE ML Suite"
requires-python = ">=3.10"
dependencies = ["tomli>=2.0; python_version < '3.11'"]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
